CLOSED FIXED 40795
[Qt] Crash when uploading document to Google Docs
https://bugs.webkit.org/show_bug.cgi?id=40795
Summary [Qt] Crash when uploading document to Google Docs
kompotfx
Reported 2010-06-17 12:01:49 PDT
Login to http://docs.google.com account Select any file to upload Start uploading Observe application crashing ( class QScopedPointer ... inline T *data() const { return d; <----crash here } )
Attachments
Proposed patch (2.14 KB, patch)
2010-06-30 16:12 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-06-30 15:19:18 PDT
Confirmed on ToT + current Qt 4.7.
Andreas Kling
Comment 2 2010-06-30 16:12:00 PDT
Created attachment 60163 [details] Proposed patch
WebKit Commit Bot
Comment 3 2010-06-30 23:07:41 PDT
Comment on attachment 60163 [details] Proposed patch Clearing flags on attachment: 60163 Committed r62228: <http://trac.webkit.org/changeset/62228>
WebKit Commit Bot
Comment 4 2010-06-30 23:07:45 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5 2010-07-01 00:56:23 PDT
Revision r62228 cherry-picked into qtwebkit-2.0 with commit 4879cc0bd4c06941921771f52f3ea3d230f451d7
Note You need to log in before you can comment on or make changes to this bug.