2010-06-30  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Crash when uploading document to Google Docs
        https://bugs.webkit.org/show_bug.cgi?id=40795

        Fix bug where the local file wasn't opened (for POSTing)
        if it were the first element in the form.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::FormDataIODevice::FormDataIODevice):
        (WebCore::FormDataIODevice::moveToNextElement):
        (WebCore::FormDataIODevice::openFileForCurrentElement):
        * platform/network/qt/QNetworkReplyHandler.h:

Canonical link: https://commits.webkit.org/53178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62228 268f45cc-cd09-0410-ab3c-d52691b4dbfc